--- a/02 Textual/英國脫歐文字探勘.ipynb
+++ b/02 Textual/英國脫歐文字探勘.ipynb
@@ -39,7 +39,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text_list = read_text_folder(\"./dataset/\")\n",
+    "print(\"document number:\", len(text_list))"
+   ]
   }
  ],
  "metadata": {
